src/test/deca/context/valid/conv_float.deca
{
int x=4;
float y = x;
}