src/test/deca/context/invalid/minus_unary_string.deca
//ERROR :4:
{
int x=4;
String leo = -x;
}